<resources>
    <string name="app_name">GroceryShopper</string>
    <string name="label_phone_number">Mobile Phone</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="label_login_options">or connect with</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="btn_register">Create new account</string>
    <string name="label_create_an_account">Create an Account</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile_phone">Mobile phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="label_regulations">By pressing sign up, you agree with the Terms of Services and Privacy Policy</string>
    <string name="btn_already_have_an_account">Already have an account?</string>
    <string name="label_email">Email</string>
    <string name="label_welcome">SuperMarket X</string>
    <string name="label_choose_amounts">Choose Amounts</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="label_quantity">1</string>
    <string name="view_cart">View cart</string>
    <string name="label_cart">Cart</string>
    <string name="label_total">Total:</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_pay_now">Pay it now</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_profile">Profile</string>
    <string name="reset_password">Reset password</string>
    <string name="menu_log_out">Logout</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_order">Orders History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="label_first_name">First Name</string>
    <string name="label_save">Save</string>
    <string name="label_current_password">Current Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_new_password">Confirm Password</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="btn_save">Save</string>
    <string name="label_instruction">Enter your email address</string>
    <string name="label_instruction_message">A verification code will be sent to the email address you provided</string>
    <string name="label_email_here">Email address:</string>
    <string name="btn_send_code">Send Code</string>
    <string name="label_shipping_title">Shipping Information</string>
    <string name="hint_street_name">Street Name</string>
    <string name="hint_city_name">City</string>
    <string name="hint_house_no">House Number</string>
    <string name="hint_zip_code">Zipcode</string>
    <string name="hint_type">Home/Apartment</string>
    <string name="btn_continue">Continue</string>
    <string name="label_payment_info">Payment Information</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_exp_date">Expiration Date</string>
    <string name="hint_card_holder">Card Holder</string>
    <string name="hint_security_code">Security Code</string>
    <string name="btn_submit_payment">Submit payment</string>
    <string name="label_select_your_card">Select your cards</string>
    <string name="label_order_history">Order History</string>
</resources>