<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/standard_padding"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:textSize="@dimen/header_text_size"
        android:text="@string/label_create_an_account"
        android:layout_marginVertical="@dimen/big_margin"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_first_name"
        android:hint="@string/hint_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_last_name"
        android:hint="@string/hint_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_address"
        android:hint="@string/hint_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/et_mobile_phone"
        android:hint="@string/hint_mobile_phone"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/et_email"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_regulations"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"

        android:textSize="@dimen/small_text_size"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_already_have_an_account"
        android:text="@string/btn_already_have_an_account"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
</LinearLayout>