<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResetPasswordActivity">


    <TextView
        android:id="@+id/tv_resetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_reset_password"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_currentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin"
        android:text="@string/label_current_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal_30" />

    <EditText
        android:id="@+id/et_currentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/tv_currentPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_vertical40"
        app:layout_constraintTop_toTopOf="@id/tv_currentPassword" />

    <TextView
        android:id="@+id/tv_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/label_new_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_currentPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_currentPassword" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/tv_newPassword"
        app:layout_constraintEnd_toEndOf="@id/et_currentPassword"
        app:layout_constraintStart_toStartOf="@id/et_currentPassword"
        app:layout_constraintTop_toTopOf="@id/tv_newPassword" />

    <TextView
        android:id="@+id/tv_confirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/label_confirm_new_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_newPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_newPassword" />

    <EditText
        android:id="@+id/et_confirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/tv_confirmNewPassword"
        app:layout_constraintEnd_toEndOf="@id/et_newPassword"
        app:layout_constraintStart_toStartOf="@id/et_newPassword"
        app:layout_constraintTop_toTopOf="@id/tv_confirmNewPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirmNewPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />
</androidx.constraintlayout.widget.ConstraintLayout>