<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductDetailActivity">


    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/niv_product_detail_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/niv_product_detail_image"
        tools:text="Chicken Teriyaki" />

    <TextView
        android:id="@+id/tv_product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/huge_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        tools:text="Bring home the yummy taste of green chicken fried in fresh refined oil with the taste of Afghani" />

    <TextView
        android:id="@+id/tv_choose_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/label_choose_amounts"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@id/tv_quantity"
        app:layout_constraintEnd_toStartOf="@id/tv_quantity"
        app:layout_constraintTop_toTopOf="@id/tv_quantity" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_amount"
        android:text="@string/label_quantity" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/standard_margin"
        android:background="@drawable/ic_subtract"
        app:layout_constraintBottom_toBottomOf="@id/tv_quantity"
        app:layout_constraintStart_toEndOf="@id/tv_quantity"
        app:layout_constraintTop_toTopOf="@id/tv_quantity" />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/btn_add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>